# katielawless-site

./: .gitignore  README.md  pyproject.toml
src/: urls.py  views.py
src/settings/: dev.py
src/static/katielawless/css/: output.css
src/templates/katielawless/: homepage.html  layout.html
src/templates/katielawless/partials/: _homepage.html
